--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,34 @@ reset
     margin: 0;
     box-sizing: border-box;
  }
+/* struttura pagina html */
+ .container{
+   height: 90vh;
+   width: 1800px;
+   margin: 0 auto;
+   background-color: lightcoral;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   border-radius: 20px;
+   margin-top: 60px;
+ }
+
+.container-img{
+   width: 600px;
+   height: 600px;
+}
+ img{
+   max-width: 100%;
+   border-radius: 20px;
+ }
+button{
+  border-radius: 10px;
+  padding: 10px 30px;
+  margin-left: 200px;
+  margin-right: 200px;
+  cursor: pointer;
+  margin-top: 80px;
+}
+
+
