--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ reset
    max-width: 100%;
    border-radius: 20px;
  }
+
 button{
   border-radius: 10px;
   padding: 10px 30px;
@@ -35,6 +36,14 @@ button{
   margin-right: 200px;
   cursor: pointer;
   margin-top: 80px;
+}
+
+.invisible{
+  display: none;
+}
+
+.visible{
+  display: block;
 }
 
 
